# Symbolic-Numworks

./: Cargo.toml  justfile
src/: input.rs  main.rs  parsebeta.rs  parser.rs  ui.rs
