cargo-features = ["profile-rustflags"]
[package]
name = "symbolic"
version = "0.1.0"
authors = ["Cleboost"]
edition = "2024"

[[bin]]
name = "symbolic"
path = "src/main.rs"
test = false
doctest = false
bench = false

[lib]
path = "src/main.rs"
bench = false
crate-type = ["cdylib"]
name = "symbolicSim"

[profile.dev]
panic="abort"
strip=true
opt-level= "z"
lto = true
codegen-units = 1

[profile.release]
panic="abort"
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
cortex-m = "0.7.7"
embedded-alloc = "0.6.0"
enum-iterator = "2.3.0"
heapless = "0.8"
num-rational = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

[build-dependencies]
cc = "1.2.27"
